@startuml
class GameView{
    --Methods--
    + refresh()
}

class JPanel

class JLabel

class Chess{
    --Methods--
    + Move()
    + GetPieceAt()
    + GetMessage()
}

class Square{
    --Methods--
    + getXpos()
    + getYpos()
    + getPiece()
}

class Piece{
    --Properties--
    + inStrike
    + hasMoved
    + isChecking
    --Methods--
    + validMove()
    + getColor()
    + getX()
    + setX()
    + getY()
    + setY()
    + getDir()
}

class Rook
class Knight
class Bishop
class Queen
class King
class Pawn
class Mock

interface ActionListener



JFrame <-- GameView
GameView --o Chess


JPanel "2" *-- GameView
Square "64" *-- JPanel
JLabel "1" *-- JPanel


Piece "64" *-- Chess

JButton <-- Square
ActionListener <.. GameView

Square --o Piece

Piece <-- Rook
Piece <-- Knight
Piece <-- Bishop
Piece <-- Queen
Piece <-- King
Piece <-- Pawn
Piece <-- Mock

@enduml